[gd_scene load_steps=13 format=3 uid="uid://c00a8luwst5da"]

[ext_resource type="Script" path="res://entities/spaceship/ship.gd" id="1_pvfd2"]
[ext_resource type="Texture2D" uid="uid://ds0uenly6q3gr" path="res://assets/sprites/Main_character.png" id="2_xr7bw"]
[ext_resource type="Script" path="res://entities/spaceship/weapon_pivot.gd" id="4_fr8yc"]

[sub_resource type="AtlasTexture" id="AtlasTexture_ls0k0"]
atlas = ExtResource("2_xr7bw")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_506x3"]
atlas = ExtResource("2_xr7bw")
region = Rect2(32, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_jp1m0"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ls0k0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_506x3")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_v063n"]
atlas = ExtResource("2_xr7bw")
region = Rect2(32, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_8geto"]
atlas = ExtResource("2_xr7bw")
region = Rect2(32, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_arg0p"]
atlas = ExtResource("2_xr7bw")
region = Rect2(32, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_psjhj"]
atlas = ExtResource("2_xr7bw")
region = Rect2(32, 128, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_dqxwr"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_v063n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8geto")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_arg0p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_psjhj")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_vioys"]
radius = 23.0

[node name="Ship" type="CharacterBody2D" groups=["PLAYER"]]
collision_layer = 3
collision_mask = 3
motion_mode = 1
script = ExtResource("1_pvfd2")

[node name="SpriteMain" type="AnimatedSprite2D" parent="."]
rotation = 1.5708
scale = Vector2(2.5, 2.5)
sprite_frames = SubResource("SpriteFrames_jp1m0")
autoplay = "default"

[node name="SpriteFire" type="AnimatedSprite2D" parent="SpriteMain"]
unique_name_in_owner = true
sprite_frames = SubResource("SpriteFrames_dqxwr")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-7, 0)
shape = SubResource("CircleShape2D_vioys")

[node name="Weapon" type="Node2D" parent="."]
unique_name_in_owner = true
script = ExtResource("4_fr8yc")

[node name="WeaponAnchor" type="Marker2D" parent="Weapon"]
unique_name_in_owner = true
position = Vector2(32, 0)

[node name="WeaponCooldown" type="Timer" parent="Weapon"]
unique_name_in_owner = true
wait_time = 0.25

[connection signal="timeout" from="Weapon/WeaponCooldown" to="Weapon" method="cooldown_finished"]
